# AnaMark-Tuning-Library

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SCL_Import.cpp  SCL_Import.h  TUN_Error.h  TUN_Formula.h  TUN_Scale.cpp  TUN_Scale.h  TUN_StringTools.cpp  TUN_StringTools.h  _s_c_l___import_8cpp.html  _s_c_l___import_8h.html  _s_c_l___import_8h_source.html  _t_u_n___embed_h_t_m_l_8cpp.html  _t_u_n___embed_h_t_m_l_8h.html  _t_u_n___embed_h_t_m_l_8h_source.html  _t_u_n___error_8h.html  _t_u_n___error_8h_source.html  _t_u_n___formula_8h.html  _t_u_n___formula_8h_source.html  _t_u_n___m_i_d_i_channel_range_8h.html  _t_u_n___m_i_d_i_channel_range_8h_source.html  _t_u_n___multi_scale_file_8h.html  _t_u_n___multi_scale_file_8h_source.html  _t_u_n___scale_8cpp.html  _t_u_n___scale_8h.html  _t_u_n___scale_8h_source.html  _t_u_n___string_tools_8cpp.html  _t_u_n___string_tools_8h.html  _t_u_n___string_tools_8h_source.html  annotated.html  class_t_u_n_1_1_c_embed_h_t_m_l-members.html  class_t_u_n_1_1_c_embed_h_t_m_l.html  class_t_u_n_1_1_c_err-members.html  class_t_u_n_1_1_c_err.html  (+33 more)
cmake/: Doxyfile.in  build-docs.cmake  docroot.md  doxy-coverage.py
include/: AnaMark-Tuning-Library.h
old_src/: SCL_Import.cpp  SCL_Import.h  TUN_EmbedHTML.cpp  TUN_EmbedHTML.h  TUN_Formula.h  TUN_MIDIChannelRange.h  TUN_MultiScaleFile.h  TUN_Scale.cpp  TUN_Scale.h  TUN_Scale_Backup.cpp  TUN_Scale_Backup.h  TUN_StringTools.cpp  TUN_StringTools.h
search/: all_0.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  (+1 more)
src/: APIIdeas  APIIdeas.cpp  AnaMark.hpp  AttacherProvider.hpp  CRTP_Test.cpp  ChangeMediator.hpp  Definitions.hpp  Format.h  Format.hpp  ProvidesErrorMessage.h  ProvidesErrorMessage.hpp  SCL_Import.cpp  SCL_Import.h  Scale.hpp  ScaleManager.h  SingleScale.h  TUN_EmbedHTML.cpp  TUN_EmbedHTML.h  TUN_Error.h  TUN_Formula.h  TUN_MultiScaleFile.h  TUN_Scale.cpp  TUN_Scale.h  TUN_StringTools.cpp  TUN_StringTools.h  Utilities.hpp
src/DynamicScaleFormats/: DSFScaleRepresentative.hpp  DynamicScaleFormat.h  DynamicScaleFormat.hpp  MTS-ESP-Client.hpp  MTS-ESP-Master.hpp  MTS-ESP.h  MTS-ESP.hpp  MTS.h  MTS.hpp
src/DynamicScaleFormats/MTS-ESP/: Client.hpp  Master.hpp
src/ScaleCollectionFormats/: ScaleCollectionFormat.h  ScaleCollectionFormat.hpp
src/ScaleFormats/: ScaleFormat.h  ScaleFormat.hpp  TUN.cpp  TUN.h  TUN.hpp
tests/: basics.cpp  main.cpp  scl_kbm.cpp  testutils.cpp  testutils.h
